testsuite/tests/typecheck/should_fail/T7368a.stderr

T7368a.hs:8:6: error: [GHC-18872]
    • Couldn't match kind ‘* -> *’ with ‘*’
      When matching types
        w0 :: * -> *
        Bad f :: *
      Expected: f (Bad f)
        Actual: Bad w0
    • In the pattern: Bad x
      In an equation for ‘fun’: fun (Bad x) = True
    • Relevant bindings include
        fun :: f (Bad f) -> Bool (bound at T7368a.hs:8:1)
